# DATN

./: .dockerignore  .gitignore  CLAUDE.md  DATA.csv  Dockerfile  README.md  SENSORS_GUIDE.md  docker-compose.yml  esp32_sensor_node.ino  greenhouse_analysis.ipynb  raspberry_pi_setup.md  start-docker.ps1
.claude/: settings.local.json
.github/: copilot-instructions.md
backend/: import_csv.py  main.py  requirements.txt
backend/api/: routes.py
backend/core/: __init__.py  config.py  crop_profiles.py  dependencies.py
backend/db/: __init__.py  models.py
backend/services/: __init__.py  greenhouse.py  ml_trainer.py
backend/trained_models/: linear_model.pkl  logistic_model.pkl  random_forest_clf_model.pkl  random_forest_model.pkl  xgboost_clf_model.pkl  xgboost_model.pkl
esp32c3_datn/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.old
esp32c3_datn/main/: CMakeLists.txt  config.h  dht22.cpp  dht22.h  ds18b20_drv.cpp  ds18b20_drv.h  ds3231.cpp  ds3231.h  http_poster.cpp  http_poster.h  idf_component.yml  main.cpp  sdcard_logger.cpp  sdcard_logger.h  sensor_types.h  soil_adc.cpp  soil_adc.h  wifi_manager.cpp  wifi_manager.h
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/crops/: page.tsx
frontend/src/components/: CropStatusPanel.tsx  CropsManager.tsx  Dashboard.tsx  HistoryTable.tsx  LoadingOverlay.tsx  Navbar.tsx  Settings.tsx  Training.tsx
frontend/src/context/: SensorContext.tsx
frontend/src/services/: api.ts  socket.ts
frontend/src/types/: sensor.ts
(+4 files in other folders)
